[gd_scene load_steps=15 format=3 uid="uid://0wgtaxeptis8"]

[ext_resource type="Script" uid="uid://b5524tcca5754" path="res://src/components/TableItem.gd" id="1_433wv"]
[ext_resource type="Texture2D" uid="uid://u3fwlj6k4ho0" path="res://src/assets/play-white.svg" id="2_pvm18"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk4rc"]
content_margin_left = 30.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bkxs0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhyes"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hn40c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvm18"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14o4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yoide"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pvm18"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qjmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chrbn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjwby"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_433wv"]

[node name="TableItem" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 1.003125
anchor_bottom = 0.043055557
offset_right = -1284.0
offset_bottom = -31.0
script = ExtResource("1_433wv")
metadata/_edit_use_anchors_ = true

[node name="NameContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hk4rc")
text = "NOME"
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="RunDevBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bkxs0")
icon = ExtResource("2_pvm18")

[node name="VSeparator2" type="VSeparator" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_bhyes")

[node name="RunStageBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_hn40c")
icon = ExtResource("2_pvm18")

[node name="VSeparator3" type="VSeparator" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_pvm18")

[node name="RunHomologBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_14o4w")
icon = ExtResource("2_pvm18")

[node name="VSeparator4" type="VSeparator" parent="Buttons"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_pvm18")

[node name="RunProdBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yoide")
icon = ExtResource("2_pvm18")

[node name="Actions" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(330, 0)
layout_mode = 2
alignment = 1

[node name="RunFrontBtn" type="Button" parent="Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/icon = SubResource("CompressedTexture2D_pvm18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5qjmp")
text = "front"
icon = ExtResource("2_pvm18")

[node name="RunBackBtn" type="Button" parent="Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_chrbn")
text = "back"
icon = ExtResource("2_pvm18")

[node name="EditBtn" type="Button" parent="Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vjwby")
text = "Edit"

[node name="DeleteBtn" type="Button" parent="Actions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_433wv")
text = "Delete"

[connection signal="pressed" from="Actions/RunFrontBtn" to="." method="_on_run_front_btn_pressed"]
[connection signal="pressed" from="Actions/RunBackBtn" to="." method="_on_run_back_btn_pressed"]
[connection signal="pressed" from="Actions/EditBtn" to="." method="_on_edit_btn_pressed"]
[connection signal="pressed" from="Actions/DeleteBtn" to="." method="_on_delete_btn_pressed"]
